--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-US"> 
 
 <head>
-<title>Practice Page</title><
+<title>Practice Page</title>
 </head>
 
 <h1>This is a practice page.</h1>
