--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 <h1>This is a practice page.</h1>
 
-<p>This is my first github webpage
+<p>This is my first github webpage.
+
+  <p> <img width="400" height="400" align="center" src=grid.jpg></p>
 
 </html>
