--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html lang="en-US"> 
 
 <head>
-<title>Practice Page</title>
+<title>Community Survey, 2023, Bloomington</title>
 </head>
 
-<h1>This is a practice page.</h1>
-
-<p>This is my first github webpage.
-
-  <p> <img width="400" height="400" align="center" src=grid.jpg></p>
+<ul>
+  <li>First item</li>
+  <li>Second item</li>
+  <li>Third item</li>
+</ul>
 
 </html>
