--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html lang="en-US"> 
 
 <head>
-<title>Community Survey, 2023, Bloomington</title>
+<title>Polco Community Survey, 2023, Bloomington</title>
+  <h1>  Polco Community Survey, 2023, Bloomington</h1>
 </head>
 
 <ul>
-  <li>First item</li>
+  <li>1.  Based on a sample of 367/3,000 completed surveys (12.2%)</li>
   <li>Second item</li>
   <li>Third item</li>
 </ul>
