--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html lang="en-US"> 
 
 <head>
-<title>Polco Community Survey, 2023, Bloomington</title>
-  <h1>  Polco Community Survey, 2023, Bloomington</h1>
+<title>Polco 2023 Community Survey, Bloomington</title>
+  <h1><center></center>  Polco 2023 Community Survey, Bloomington</center></h1>
 </head>
 
 <ul>
-  <li>1.  Based on a sample of 367/3,000 completed surveys (12.2%)</li>
+  <li> <b>1.</b>  Based on a sample of 367/3,000 completed surveys (12.2%)</li>
   <li>Second item</li>
   <li>Third item</li>
 </ul>
