--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <title>Polco 2023 Community Survey, Bloomington</title>
   <h1><center></center>  Polco 2023 Community Survey, Bloomington</center></h1>
 </head>
+<p>The population sample was 367/3,000 = 12.2%.  </p> 
 
+  <p> The following three points are explicit in the survey report.</p></p>
 <ul>
-  <li> <b>1.</b>  Based on a sample of 367/3,000 completed surveys (12.2%)</li>
-  <li>Second item</li>
-  <li>Third item</li>
+  <li> <b>1.</b>  The sample population significantly misrepresents the Bloomington population. </li>
+   <li> <b>2.</b>  The data presented in the report as "percentages of respondents" 
+     is not the precentage of respondents.  It is "weighted". </li>
+   <li> <b>3.</b>  Based on a sample of 367/3,000 completed surveys (12.2%)</li>
 </ul>
 
 </html>
