--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en-US" font-size: 125%;> 
+<html lang="en-US" style= "font-size: 125%;"> 
 
 <head>
 <title>Polco 2023 Community Survey, Bloomington</title>
