--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 </head>
 <p>The population sample was 367/3,000 = 12.2%.  </p> 
 
-  <p> The following three points are explicit in the survey report.</p></p>
-<ul>
-  <li> <b>1.</b>  The sample population significantly misrepresents the Bloomington population. </li>
-   <li> <b>2.</b>  The data presented in the report as "percentages of respondents" 
-     is not the precentage of respondents.  It is "weighted". </li>
-   <li> <b>3.</b>  Based on a sample of 367/3,000 completed surveys (12.2%)</li>
-</ul>
+  <p> The following three points are explicit in the survey report.</p>
+<ol style="font-weight: bold;">
+  <li>    The sample population significantly misrepresents the Bloomington population. </li>
+   <li>   The reported percentages do  not represent the  percentages of respondents  It is "weighted". </li>
+   <li>      </li>
+</ol>
 
 </html>
