--- a/index.html
+++ b/index.html
@@ -12,5 +12,47 @@
    <li>   The reported percentages do  not represent the  percentages of respondents  It is "weighted". </li>
    <li>      </li>
 </ol>
+<table>
+  <thead>
+    <tr>
+      <th style="font-size: 1.2em; font-weight: bold;">Column 1</th>
+      <th style="font-size: 1.2em; font-weight: bold;">Column 2</th>
+      <th style="font-size: 1.2em; font-weight: bold;">Column 3</th>
+      <th style="font-size: 1.2em; font-weight: bold;">Column 4</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="font-size: 1.2em; font-weight: bold;">Row 1, Col 1</td>
+      <td>Row 1, Col 2</td>
+      <td>Row 1, Col 3</td>
+      <td>Row 1, Col 4</td>
+    </tr>
+    <tr>
+      <td style="font-size: 1.2em; font-weight: bold;">Row 2, Col 1</td>
+      <td>Row 2, Col 2</td>
+      <td>Row 2, Col 3</td>
+      <td>Row 2, Col 4</td>
+    </tr>
+    <tr>
+      <td style="font-size: 1.2em; font-weight: bold;">Row 3, Col 1</td>
+      <td>Row 3, Col 2</td>
+      <td>Row 3, Col 3</td>
+      <td>Row 3, Col 4</td>
+    </tr>
+    <tr>
+      <td style="font-size: 1.2em; font-weight: bold;">Row 4, Col 1</td>
+      <td>Row 4, Col 2</td>
+      <td>Row 4, Col 3</td>
+      <td>Row 4, Col 4</td>
+    </tr>
+    <tr>
+      <td style="font-size: 1.2em; font-weight: bold;">Row 5, Col 1</td>
+      <td>Row 5, Col 2</td>
+      <td>Row 5, Col 3</td>
+      <td>Row 5, Col 4</td>
+    </tr>
+  </tbody>
+</table>
 
 </html>
