--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html lang="en-US" style= "font-size: 125%;"> 
+.bold-numbers {
+  font-weight: bold;
+}
+.bold-numbers li {
+  font-weight: normal;
+}
 
 <head>
 <title>Polco 2023 Community Survey, Bloomington</title>
@@ -7,7 +13,7 @@
 <p>The population sample was 367/3,000 = 12.2%.  </p> 
 
   <p> The following three points are explicit in the survey report.</p>
-<ol style="font-weight: bold;">
+<ol class="bold-numbers">
   <li>    The sample population significantly misrepresents the Bloomington population. </li>
    <li>   The reported percentages do  not represent the  percentages of respondents  It is "weighted". </li>
    <li>      </li>
