--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
 <title>Polco 2023 Community Survey, Bloomington</title>
-  <h1><center></center>  Polco 2023 Community Survey, Bloomington</center></h1>
+  <h1><center>  Polco 2023 Community Survey, Bloomington</center></h1>
 </head>
 <p>The population sample was 367/3,000 = 12.2%.  </p> 
 
@@ -20,44 +20,37 @@
 </ol>
 <table>
   <thead>
+     <tr>
+      <td style="font-size: 1.2em; font-weight: bold;">Own Home</td>
+      <td>35%</td>
+      <td>65%</td>
+    </tr>
     <tr>
-      <th style="font-size: 1.2em; font-weight: bold;">Column 1</th>
-      <th style="font-size: 1.2em; font-weight: bold;">Column 2</th>
-      <th style="font-size: 1.2em; font-weight: bold;">Column 3</th>
-      <th style="font-size: 1.2em; font-weight: bold;">Column 4</th>
+      <th style="font-size: 1.2em; font-weight: bold;"> </th>
+      <th style="font-size: 1.2em; font-weight: bold;">B-Town</th>
+      <th style="font-size: 1.2em; font-weight: bold;">P-Town</th>
+      <th style="font-size: 1.2em; font-weight: bold;">Difference</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td style="font-size: 1.2em; font-weight: bold;">Row 1, Col 1</td>
-      <td>Row 1, Col 2</td>
-      <td>Row 1, Col 3</td>
-      <td>Row 1, Col 4</td>
+      <td style="font-size: 1.2em; font-weight: bold;">Women</td>
+      <td>50%</td>
+      <td>60%</td>
     </tr>
     <tr>
-      <td style="font-size: 1.2em; font-weight: bold;">Row 2, Col 1</td>
-      <td>Row 2, Col 2</td>
-      <td>Row 2, Col 3</td>
-      <td>Row 2, Col 4</td>
+      <td style="font-size: 1.2em; font-weight: bold;">Older (>34)</td>
+      <td> 23%</td>
+      <td> 64%</td>
     </tr>
     <tr>
-      <td style="font-size: 1.2em; font-weight: bold;">Row 3, Col 1</td>
-      <td>Row 3, Col 2</td>
-      <td>Row 3, Col 3</td>
+      <td style="font-size: 1.2em; font-weight: bold;">Live in S.E.</td>
+      <td>41%</td>
+      <td>54</td>
       <td>Row 3, Col 4</td>
     </tr>
-    <tr>
-      <td style="font-size: 1.2em; font-weight: bold;">Row 4, Col 1</td>
-      <td>Row 4, Col 2</td>
-      <td>Row 4, Col 3</td>
-      <td>Row 4, Col 4</td>
-    </tr>
-    <tr>
-      <td style="font-size: 1.2em; font-weight: bold;">Row 5, Col 1</td>
-      <td>Row 5, Col 2</td>
-      <td>Row 5, Col 3</td>
-      <td>Row 5, Col 4</td>
-    </tr>
+   
+    
   </tbody>
 </table>
 
