--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <html lang="en-US" style= "font-size: 125%;"> 
-.bold-numbers {
+
+
+  <style>
+
+    .bold-numbers {
   font-weight: bold;
 }
 .bold-numbers li {
   font-weight: normal;
 }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  th, td {
+    border: 1px solid black;
+    padding: 10px;
+    font-size: 1.2em;
+  }
+
+  th {
+    font-weight: bold;
+  }
+
+  td:first-child {
+    font-weight: bold;
+  }
+</style>
+
+
 
 <head>
 <title>Polco 2023 Community Survey, Bloomington</title>
