--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   font-weight: bold;
 }
 .bold-numbers li {
-  font-weight: normal;
+  font-weight: bold;
 }
 table {
     border-collapse: collapse;
-    width: 100%;
+    width: 90%;
   }
 
 th, td {
