--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
       <td>35%</td>
       <td>65%</td>
     </tr>
+       <tr>
+      <td style="font-size: 1.2em; font-weight: bold;">White</td>
+      <td>82%</td>
+      <td>87%</td>
     </tr>
    
     
