--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     border: 1px solid black;
     padding: 10px;
     font-size: 1.2em;
-    align: center;
+    text-align: center;
+    vertical-align: middle;
   }
 
   th {
