--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <p> The following three points are explicit in the survey report.</p>
 <ol class="bold-numbers">
   <li>    The sample population significantly misrepresents the Bloomington population. </li>
-   <li>   The reported percentages do  not represent the  percentages of respondents  It is "weighted". </li>
+   <li>   The reported percentages do  not represent the  percentages of respondents.  Data is  heavily  "weighted". </li>
    <li>      </li>
 </ol>
 <table>
