--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
    <li>   The reported percentages do  not represent the  percentages of respondents.  Data is  heavily  "weighted". </li>
    <li>      </li>
 </ol>
-<table>
+
+ <center>
+ <table>
   <thead>
    
     <tr>
@@ -97,5 +99,5 @@
     
   </tbody>
 </table>
-
+</center>
 </html>
