--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <tr>
       <th style="font-size: 1.2em; font-weight: bold;"> </th>
       <th style="font-size: 1.2em; font-weight: bold;">B-Town</th>
-      <th style="font-size: 1.2em; font-weight: bold;">P-Town</th>
+      <th style="font-size: 1.2em; font-weight: bold;">S-Town</th>
     </tr>
   </thead>
   <tbody>
