--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en-US" style= "font-size: 125%;"> 
 <style>
  table {
+    margine-left: 50px
     border-collapse: collapse;
     width: 50%;
   }
@@ -47,8 +48,8 @@
 
 
 <head>
-<title>Polco 2023 Community Survey, Bloomington</title>
-  <h1><center>  Polco 2023 Community Survey, Bloomington</center></h1>
+<title>Polco 2023 Community Survey</title>
+  <h1><center>  Polco 2023 Community Survey</center></h1>
 </head>
 <p>The population sample was 367/3,000 = 12.2%.  </p> 
 
