--- a/index.html
+++ b/index.html
@@ -51,15 +51,13 @@
 <title>Polco 2023 Community Survey</title>
   <h1><center>  Polco 2023 Community Survey</center></h1>
 </head>
-<p>The population sample was 367/3,000 = 12.2%.  </p> 
+<p>The population sample was 367/3000 = 12.2%.  </p> 
 
   <p> The following three points are explicit in the survey report.</p>
-<ol class="bold-numbers">
-  <li>    The sample population significantly misrepresents the Bloomington population. </li>
-   <li>   The reported percentages do  not represent the  percentages of respondents.  Data is  heavily  "weighted". </li>
-   <li>      </li>
-</ol>
-
+ 
+<hr>
+ 
+<b> The sample population did not accurately represent Bloomoington.</b>
  
  <table>
   <thead>
@@ -100,5 +98,8 @@
     
   </tbody>
 </table>
- 
+
+ <hr>
+
+ hello
 </html>
