--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-US" style= "font-size: 125%;"> 
 <style>
  table {
-    margin-left: 50px;
+    margin-left: 100px;
     border-collapse: collapse;
     width: 50%;
   }
@@ -53,12 +53,10 @@
 </head>
 <p>The population sample was 367/3000 = 12.2%.  </p> 
 
-  <p> The following three points are explicit in the survey report.</p>
- 
 <hr>
  
 <b> The sample population did not accurately represent Bloomoington.</b>
- 
+<br> 
  <table>
   <thead>
    
@@ -98,8 +96,12 @@
     
   </tbody>
 </table>
+<br>
 
+<p>  When the report states 
+ <quote></quote>"18% of respondents selected the
+access to educational opportunities" </p>quote>
+ it does not mean 
  <hr>
-
- hello
+<br>
 </html>
