--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
 <title>Polco 2023 Community Survey</title>
   <h1><center>  Polco 2023 Community Survey</center></h1>
 </head>
+
+ <br>
 <p>The population sample was 367/3000 = 12.2%.  </p> 
 
 <hr>
  
-<b> The sample population did not accurately represent Bloomoington.</b>
+<b> &nbsp &nbsp &nbsp &nbsp &nbsp The sample population did not accurately represent Bloomoington.</b>
 <br> 
  <table>
   <thead>
