--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html lang="en-US" style= "font-size: 125%;"> 
 <style>
+
+  body { margin: 0 10%; } 
+ 
  table {
     margin-left: 100px;
     border-collapse: collapse;
