--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-US" style= "font-size: 125%;"> 
 <style>
 
-  body { margin: 0 10%; } 
+  body  { margin-left: 10%; margin-right: 20%; } 
  
  table {
     margin-left: 100px;
@@ -61,7 +61,7 @@
 <hr>
  
 <b> &nbsp &nbsp &nbsp &nbsp &nbsp The sample population did not accurately represent Bloomoington.</b>
-<br> 
+<br> <br>
  <table>
   <thead>
    
