--- a/index.html
+++ b/index.html
@@ -102,11 +102,15 @@
   </tbody>
 </table>
 <br>
+<hr>
+<p> 
+&nbsp &nbsp &nbsp &nbsp  <b> When the report states 
+ <quote>"18% of respondents selected the
+access to educational opportunities" </quote> </b>
 
-<p>  When the report states 
- <quote></quote>"18% of respondents selected the
-access to educational opportunities" </p>quote>
- it does not mean 
+ it does not mean:  18% of respondents selected the
+access to educational opportunities.
+  <br>
  <hr>
-<br>
+
 </html>
