--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html lang="en-US" style= "font-size: 125%;"> 
+<html lang="en-US" style= "font-size: 135%;"> 
 <style>
 
   body  { margin-left: 10%; margin-right: 20%; } 
  
  table {
-    margin-left: 100px;
+    margin-left: 20px;
     border-collapse: collapse;
     width: 50%;
   }
@@ -59,8 +59,8 @@
 <p>The population sample was 367/3000 = 12.2%.  </p> 
 
 <hr>
- 
-<b> &nbsp &nbsp &nbsp &nbsp &nbsp The sample population did not accurately represent Bloomoington.</b>
+ <br>
+<b>  The sample population did not accurately represent Bloomington.</b>
 <br> <br>
  <table>
   <thead>
@@ -68,7 +68,7 @@
     <tr>
       <th style="font-size: 1.2em; font-weight: bold;"> </th>
       <th style="font-size: 1.2em; font-weight: bold;">B-Town</th>
-      <th style="font-size: 1.2em; font-weight: bold;">S-Town</th>
+      <th style="font-size: 1.2em; font-weight: bold;">Survey-Town</th>
     </tr>
   </thead>
   <tbody>
@@ -78,14 +78,14 @@
       <td>60%</td>
     </tr>
     <tr>
-      <td style="font-size: 1.2em; font-weight: bold;">Older (>34)</td>
+      <td style="font-size: 1.2em; font-weight: bold;">Age > 34  years</td>
       <td> 23%</td>
       <td> 64%</td>
     </tr>
     <tr>
       <td style="font-size: 1.2em; font-weight: bold;">Live in S.E.</td>
       <td>41%</td>
-      <td>54</td>
+      <td>54%</td>
 
         <tr>
       <td style="font-size: 1.2em; font-weight: bold;">Own Home</td>
@@ -103,15 +103,14 @@
 </table>
 <br>
 <hr>
- <hr>
-  <br>
+ 
 <p> 
-&nbsp &nbsp &nbsp &nbsp  <b> When the report states 
- <quote>"18% of respondents selected the
-access to educational opportunities" </quote> </b>
+  <b> When the report states 
+ "18% of respondents selected the
+access to educational opportunities"  
 
  it does not mean:  18% of respondents selected the
-access to educational opportunities.
+access to educational opportunities. </b>
   <br>
  <hr>
 
